<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="romain.com.multigames.CreatePlayerActivity"
    android:gravity="center_horizontal"
    android:background="@color/colorWhite">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/image_player"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/avatar_placeholder"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

        <EditText
            android:id="@+id/lastname_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname_player"
            android:inputType="text"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/firstname_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname_player"
            android:inputType="text"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/old_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_player"
            android:inputType="number"
            android:maxLength="3"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/location_player"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/location_player"
                android:inputType="text" />
            <ImageView
                android:id="@+id/image_location_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_mylocation"/>

        </LinearLayout>

    </LinearLayout>



    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/main_more_or_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <Button
        android:id="@+id/btn_show_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_list_players"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_validate_create_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_validate"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>
