<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="romain.com.multigames.DetailPlayerActivity"
    android:gravity="center_horizontal"
    android:background="@color/colorWhite">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="@string/detail_player_title"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/image_player"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="100dp"
            android:src="@drawable/avatar_placeholder"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/firstname_player_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Firstname"
                android:textSize="26sp"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/lastname_player_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lastname"
                android:textSize="26sp"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="50dp"
        >
        <TextView
            android:id="@+id/age_player_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/location_player_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Localisation"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/swipe_player_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Swipe"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/dragndrop_player_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DragNDrop"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/ipacgame_player_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ipac Game"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/fasttap_player_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FastTap"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_player_modify"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>



    <Button
        android:id="@+id/btn_delete_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_player_delete"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

</LinearLayout>
